[gd_scene load_steps=4 format=3 uid="uid://c6bngr8thu4hu"]

[ext_resource type="Script" path="res://Assets/UI/UI_Scripts/health_bar.gd" id="1_kt4f0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tagsu"]
draw_center = false
skew = Vector2(0, -0.1)
border_width_top = 35
border_width_bottom = 135
border_color = Color(0.6, 0.6, 0.6, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 5.0
expand_margin_top = 10.0
expand_margin_right = 5.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tv3k6"]
bg_color = Color(1, 0, 0.3, 0.756863)
skew = Vector2(0, -0.1)
border_width_top = 5
border_width_bottom = 5
border_color = Color(1, 0.19, 0.514, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="HealthBar" type="ProgressBar"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = -255.0
offset_right = 43.0
offset_bottom = -28.0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_tagsu")
theme_override_styles/fill = SubResource("StyleBoxFlat_tv3k6")
value = 100.0
fill_mode = 3
show_percentage = false
script = ExtResource("1_kt4f0")

[node name="HideTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="value_changed" from="." to="." method="_on_value_changed"]
[connection signal="timeout" from="HideTimer" to="." method="_on_hide_timer_timeout"]
